--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   "author": "Elvin M. Samuel <ElvinSamuel1@gmail.com>",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer": "^9.1.0",
     "gulp": "^3.9.1",
     "gulp-cli": "^2.0.1",
     "gulp-postcss": "^7.0.1",
+    "postcss-cssnext": "^3.1.0",
+    "postcss-short": "^4.1.0",
     "postcss-short-color": "^3.0.0"
   }
 }
